--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@whoisarpit/supabase-to-zod",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.0",
   "description": "Convert Supabase TypeScript types to Zod schemas",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
