Use jiti instead of ts-node

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "build": "tsc",
     "prepublishOnly": "pnpm build",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "jiti src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "example:generate": "ts-node src/index.ts -i example/db.types.ts -o example/zod.types.ts",
+    "example:generate": "jiti src/index.ts -i example/db.types.ts -o example/zod.types.ts",
     "release:patch": "npm version patch && git push origin && git push origin --tags",
     "release:minor": "npm version minor && git push origin && git push origin --tags",
     "release:major": "npm version major && git push origin && git push origin --tags",
@@ -66,8 +66,8 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "jiti": "^2.4.2",
     "prettier": "^3.4.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
