Remove extra scripts

--- a/package.json
+++ b/package.json
@@ -17,19 +17,16 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "pnpm build",
-    "start": "node dist/index.js",
     "dev": "jiti src/index.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "fix": "eslint --fix . && prettier --write .",
     "example:generate": "jiti src/index.ts -i example/db.types.ts -o example/zod.types.ts",
     "release:patch": "npm version patch && git push origin && git push origin --tags",
     "release:minor": "npm version minor && git push origin && git push origin --tags",
     "release:major": "npm version major && git push origin && git push origin --tags",
     "prerelease:beta": "npm version prerelease --preid=beta && git push origin && git push origin --tags",
     "publish:beta": "npm publish --tag beta",
-    "publish:latest": "npm publish --tag latest",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "publish:latest": "npm publish --tag latest"
   },
   "keywords": [
     "supabase",
