--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@whoisarpit/supabase-to-zod",
-  "version": "0.1.1-beta.4",
+  "version": "0.2.0",
   "description": "Convert Supabase TypeScript types to Zod schemas",
   "type": "module",
   "main": "dist/index.js",
