--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Dependency directories
 node_modules/
-pnpm-lock.yaml
 npm-debug.log*
 
 # Build output
@@ -62,3 +61,4 @@ build/Release
 .npmrc
 
 .next
+.vercel
